--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,11 @@
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
 # Own environment
-secret*
+secret.py
 data/
 test[0-9].py
 test.py
+*.ipynb
 
 #Tempary Files
 [Tt]emp*
